[project]
name = "5g-stability"
version = "0.1.0"
description = ""
authors = [
    {name = "daiyabarus",email = "daiyabarus@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6 (>=6.10.2,<7.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "ruff (>=0.14.11,<0.15.0)",
    "black (>=25.12.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
